Added initial version of syslog_channel

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,3 +5,6 @@ target_link_libraries("example-01" ${AIR_LIBRARIES})
 
 add_executable("example-02" "example-02.cpp")
 target_link_libraries("example-02" ${AIR_LIBRARIES})
+
+add_executable("example-03" "example-03.cpp")
+target_link_libraries("example-03" ${AIR_LIBRARIES})
